The layout for the bookshop is ready

--- a/index.html
+++ b/index.html
@@ -7,7 +7,70 @@
     <title>Bookshop</title>
 </head>
 <body>
-    <button>ss</button>
+        <header class="header">
+            <nav class="header__navigation">
+                <div class="header__logo">
+                    <p class="header__logo_text">Bookshop</p>
+                </div>
+                <ul class="header__nav">
+                    <li class="hrader__link">books</li>
+                    <li class="hrader__link">audiobooks</li>
+                    <li class="hrader__link">Stationery & gifts</li>
+                    <li class="hrader__link">blog</li>
+                </ul>
+                <ul class="header__icons">
+                    <li>
+                        <a href="#" class="">
+                            <img src="src/image/icon/profile.svg" alt="profile">
+                        </a>  
+                    </li>
+                    <li>
+                        <a href="#" class="">
+                            <img src="src/image/icon/search.svg" alt="search">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="">
+                            <img src="src/image/icon/basket.svg" alt="basket">
+                        </a>    
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section class="slider">
+            <div class="slider__container">
+                <div class="slider__tape">
+                    <img src="src/image/slider/slide_1.png" alt="banner">
+                    <img src="src/image/slider/slide_2.png" alt="banner">
+                    <img src="src/image/slider/slide_3.png" alt="banner">
+                </div>
+            </div>
+            <div class="slider__card-link">Change old book on new</div>
+            <div class="slider__card-link">top 100 books 2022</div>
+        </section>
+        <section class="">
+            <aside class="book-list__menu">
+                <ul>
+                    <li class="book-list_section">Architecture</li>
+                    <li class="book-list_section">Art & Fashion</li>
+                    <li class="book-list_section">Biography</li>
+                    <li class="book-list_section">Business</li>
+                    <li class="book-list_section">Crafts & Hobbies</li>
+                    <li class="book-list_section">Drama</li>
+                    <li class="book-list_section">Fiction</li>
+                    <li class="book-list_section">Food & Drink</li>
+                    <li class="book-list_section">Health & Wellbeing</li>
+                    <li class="book-list_section">History & Politics</li>
+                    <li class="book-list_section">Humor</li>
+                    <li class="book-list_section">Poetry</li>
+                    <li class="book-list_section">Psychology</li>
+                    <li class="book-list_section">Science</li>
+                    <li class="book-list_section">Technology</li>
+                    <li class="book-list_section">Travel & Maps</li>
+                </ul>
+            </aside>
+            <button class="book-list__load">Load more</button>
+        </section>
     <script src="dist/main.js"></script>
 </body>
 </html>
