--- a/index.html
+++ b/index.html
@@ -4,73 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./dist/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Bookshop</title>
 </head>
 <body>
-        <header class="header">
-            <nav class="header__navigation">
-                <div class="header__logo">
-                    <p class="header__logo_text">Bookshop</p>
+        <div class="container">
+            <header class="header">
+                <nav class="header__navigation">
+                    <div class="header__logo">
+                        <p class="header__logo_text">Bookshop</p>
+                    </div>
+                    <ul class="header__links">
+                        <li class="hrader__link"><a class="header__link_item header__active" href="#">books</a></li>
+                        <li class="hrader__link"><a class="header__link_item" href="#">audiobooks</a></li>
+                        <li class="hrader__link"><a class="header__link_item" href="#">Stationery & gifts</a></li>
+                        <li class="hrader__link"><a class="header__link_item" href="#">blog</a></li>
+                    </ul>
+                    <ul class="header__icons">
+                        <li>
+                            <a href="#" class="">
+                                <img src="src/image/icon/profile.svg" alt="profile">
+                            </a>  
+                        </li>
+                        <li>
+                            <a href="#" class="">
+                                <img src="src/image/icon/search.svg" alt="search">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="">
+                                <img src="src/image/icon/basket.svg" alt="basket">
+                            </a>    
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <section class="slider">
+                <div class="slider__container">
+                    <div class="slider__tape">
+                        <img src="src/image/slider/slide_1.png" alt="banner">
+                        <img src="src/image/slider/slide_2.png" alt="banner">
+                        <img src="src/image/slider/slide_3.png" alt="banner">
+                    </div>
                 </div>
-                <ul class="header__nav">
-                    <li class="hrader__link">books</li>
-                    <li class="hrader__link">audiobooks</li>
-                    <li class="hrader__link">Stationery & gifts</li>
-                    <li class="hrader__link">blog</li>
-                </ul>
-                <ul class="header__icons">
-                    <li>
-                        <a href="#" class="">
-                            <img src="src/image/icon/profile.svg" alt="profile">
-                        </a>  
-                    </li>
-                    <li>
-                        <a href="#" class="">
-                            <img src="src/image/icon/search.svg" alt="search">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#" class="">
-                            <img src="src/image/icon/basket.svg" alt="basket">
-                        </a>    
-                    </li>
-                </ul>
-            </nav>
-        </header>
-        <section class="slider">
-            <div class="slider__container">
-                <div class="slider__tape">
-                    <img src="src/image/slider/slide_1.png" alt="banner">
-                    <img src="src/image/slider/slide_2.png" alt="banner">
-                    <img src="src/image/slider/slide_3.png" alt="banner">
-                </div>
-            </div>
-            <div class="slider__card-link">Change old book on new</div>
-            <div class="slider__card-link">top 100 books 2022</div>
-        </section>
-        <section class="">
-            <aside class="book-list__menu">
-                <ul>
-                    <li class="book-list_section">Architecture</li>
-                    <li class="book-list_section">Art & Fashion</li>
-                    <li class="book-list_section">Biography</li>
-                    <li class="book-list_section">Business</li>
-                    <li class="book-list_section">Crafts & Hobbies</li>
-                    <li class="book-list_section">Drama</li>
-                    <li class="book-list_section">Fiction</li>
-                    <li class="book-list_section">Food & Drink</li>
-                    <li class="book-list_section">Health & Wellbeing</li>
-                    <li class="book-list_section">History & Politics</li>
-                    <li class="book-list_section">Humor</li>
-                    <li class="book-list_section">Poetry</li>
-                    <li class="book-list_section">Psychology</li>
-                    <li class="book-list_section">Science</li>
-                    <li class="book-list_section">Technology</li>
-                    <li class="book-list_section">Travel & Maps</li>
-                </ul>
-            </aside>
-            <button class="book-list__load">Load more</button>
-        </section>
+                <div class="slider__card-link">Change old book on new</div>
+                <div class="slider__card-link">top 100 books 2022</div>
+            </section>
+            <section class="">
+                <aside class="book-list__menu">
+                    <ul>
+                        <li class="book-list_section">Architecture</li>
+                        <li class="book-list_section">Art & Fashion</li>
+                        <li class="book-list_section">Biography</li>
+                        <li class="book-list_section">Business</li>
+                        <li class="book-list_section">Crafts & Hobbies</li>
+                        <li class="book-list_section">Drama</li>
+                        <li class="book-list_section">Fiction</li>
+                        <li class="book-list_section">Food & Drink</li>
+                        <li class="book-list_section">Health & Wellbeing</li>
+                        <li class="book-list_section">History & Politics</li>
+                        <li class="book-list_section">Humor</li>
+                        <li class="book-list_section">Poetry</li>
+                        <li class="book-list_section">Psychology</li>
+                        <li class="book-list_section">Science</li>
+                        <li class="book-list_section">Technology</li>
+                        <li class="book-list_section">Travel & Maps</li>
+                    </ul>
+                </aside>
+                <button class="book-list__load">Load more</button>
+            </section>
+        </div>
     <script src="dist/main.js"></script>
 </body>
 </html>
