Styles have been added for the header module

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
                     </ul>
                     <ul class="header__icons">
                         <li>
-                            <a href="#" class="">
-                                <img src="src/image/icon/profile.svg" alt="profile">
+                            <a href="#" class="header__img-link">
+                                <img class="header__img" src="src/image/icon/profile.svg" alt="profile">
                             </a>  
                         </li>
                         <li>
-                            <a href="#" class="">
-                                <img src="src/image/icon/search.svg" alt="search">
+                            <a href="#" class="header__img-link">
+                                <img class="header__img" src="src/image/icon/search.svg" alt="search">
                             </a>
                         </li>
                         <li>
-                            <a href="#" class="">
-                                <img src="src/image/icon/basket.svg" alt="basket">
+                            <a href="#" class="header__img-link">
+                                <img class="header__img" src="src/image/icon/basket.svg" alt="basket">
                             </a>    
                         </li>
                     </ul>
