The content for the slider has been styled

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 </div>
                 <div class="slider__card-link">Change old book on new</div>
                 <div class="slider__card-link">top 100 books 2022</div>
+                <span class="header__dot_button"></span>
+                <span class="header__dot_button"></span>
+                <span class="header__dot_button"></span>
             </section>
             <section class="">
                 <aside class="book-list__menu">
