The styling of the slider is complete

--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
                         <img src="src/image/slider/slide_3.png" alt="banner">
                     </div>
                 </div>
-                <div class="slider__card-link">Change old book on new</div>
-                <div class="slider__card-link">top 100 books 2022</div>
-                <span class="header__dot_button"></span>
-                <span class="header__dot_button"></span>
-                <span class="header__dot_button"></span>
+                <a href="#" class="slider__card-link_violet">Change <br> old book <br> on new</a>
+                <a href="#" class="slider__card-link_pink">top <br> 100 <br> books <br> 2022</a>
+                <div class="header__control-panel">
+                    <button class="header__dot-button header__dot-button_active"></button>
+                    <button class="header__dot-button"></button>
+                    <button class="header__dot-button"></button>
+                </div>
             </section>
             <section class="">
                 <aside class="book-list__menu">
