Styles for the content block have been added

--- a/index.html
+++ b/index.html
@@ -55,25 +55,57 @@
                     <button class="header__dot-button"></button>
                 </div>
             </section>
-            <section class="">
+            <section class="book-list">
                 <aside class="book-list__menu">
                     <ul>
-                        <li class="book-list_section">Architecture</li>
-                        <li class="book-list_section">Art & Fashion</li>
-                        <li class="book-list_section">Biography</li>
-                        <li class="book-list_section">Business</li>
-                        <li class="book-list_section">Crafts & Hobbies</li>
-                        <li class="book-list_section">Drama</li>
-                        <li class="book-list_section">Fiction</li>
-                        <li class="book-list_section">Food & Drink</li>
-                        <li class="book-list_section">Health & Wellbeing</li>
-                        <li class="book-list_section">History & Politics</li>
-                        <li class="book-list_section">Humor</li>
-                        <li class="book-list_section">Poetry</li>
-                        <li class="book-list_section">Psychology</li>
-                        <li class="book-list_section">Science</li>
-                        <li class="book-list_section">Technology</li>
-                        <li class="book-list_section">Travel & Maps</li>
+                        <li class="book-list_section active">
+                            <button class="book-list__button book-list__button_active">Architecture</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Art & Fashion</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Biography</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Business</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Crafts & Hobbies</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Drama</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Fiction</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Food & Drink</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Health & Wellbeing</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">History & Politics</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Humor</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Poetry</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Psychology</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Science</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Technology</button>
+                        </li>
+                        <li class="book-list_section">
+                            <button class="book-list__button">Travel & Maps</button>
+                        </li>
                     </ul>
                 </aside>
                 <button class="book-list__load">Load more</button>
