The book card template has been added

--- a/index.html
+++ b/index.html
@@ -108,6 +108,36 @@
                         </li>
                     </ul>
                 </aside>
+                <div class="book-list__content">
+                    <div class="book-card">
+                        <img src="/src/book.png" alt="">
+                        <div class="book-card__info">
+                            <p class="book-card_author">Kevin Kwan</p>
+                            <p class="book-card__name">Crazy rich asians</p>
+                            <div class="book-card__rating">
+                                <div class="book-card__star">☆</div>
+                                <p class="book-card__reviews">1,1M review</p>
+                            </div>
+                            <p class="book-card__description">This novel can be interpreted as a double narrative, Offred's tale and the handmaids' tales. The night...</p>
+                            <p class="book-card__price">6.99$</p>
+                            <button class="book-card__button">buy now</button>
+                        </div>
+                    </div>
+                    <div class="book-card">
+                        <img src="/src/book.png" alt="">
+                        <div class="book-card__info">
+                            <p class="book-card_author">Kevin Kwan</p>
+                            <p class="book-card__name">Crazy rich asians</p>
+                            <div class="book-card__rating">
+                                <div class="book-card__star">☆</div>
+                                <p class="book-card__reviews">1,1M review</p>
+                            </div>
+                            <p class="book-card__description">This novel can be interpreted as a double narrative, Offred's tale and the handmaids' tales. The night...</p>
+                            <p class="book-card__price">6.99$</p>
+                            <button class="book-card__button">buy now</button>
+                        </div>
+                    </div>
+                </div>
                 <button class="book-list__load">Load more</button>
             </section>
         </div>
