Styles for resolution 1440px

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <title>Bookshop</title>
 </head>
 <body>
-        <div class="container">
+    <div class="container">
+        <div class="container_content">
             <header class="header">
                 <nav class="header__navigation">
                     <div class="header__logo">
@@ -141,6 +142,7 @@
                 <button class="book-list__load">Load more</button>
             </section>
         </div>
+    </div>
     <script src="dist/main.js"></script>
 </body>
 </html>
