Styles added for screens from 768px to 320px

--- a/index.html
+++ b/index.html
@@ -16,11 +16,20 @@
                         <p class="header__logo_text">Bookshop</p>
                     </div>
                     <ul class="header__links">
-                        <li class="hrader__link"><a class="header__link_item header__active" href="#">books</a></li>
-                        <li class="hrader__link"><a class="header__link_item" href="#">audiobooks</a></li>
-                        <li class="hrader__link"><a class="header__link_item" href="#">Stationery & gifts</a></li>
-                        <li class="hrader__link"><a class="header__link_item" href="#">blog</a></li>
+                        <li class="hrader__link">
+                            <a class="header__link_item header__active" href="#">books</a>
+                        </li>
+                        <li class="hrader__link">
+                            <a class="header__link_item" href="#">audiobooks</a>
+                        </li>
+                        <li class="hrader__link">
+                            <a class="header__link_item" href="#">Stationery & gifts</a>
+                        </li>
+                        <li class="hrader__link">
+                            <a class="header__link_item" href="#">blog</a>
+                        </li>
                     </ul>
+                    <div class="header__menu-mob">Меню</div>
                     <ul class="header__icons">
                         <li>
                             <a href="#" class="header__img-link">
