Added script for mobile menu opening

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div class="header__logo">
                         <p class="header__logo_text">Bookshop</p>
                     </div>
-                    <ul class="header__links">
+                    <ul class="header__links hide">
                         <li class="hrader__link">
                             <a class="header__link_item header__active" href="#">books</a>
                         </li>
