Added book filtering

--- a/index.html
+++ b/index.html
@@ -69,52 +69,52 @@
                 <aside class="book-list__menu">
                     <ul>
                         <li class="book-list_section active">
-                            <button class="book-list__button book-list__button_active">Architecture</button>
+                            <button class="book-list__button book-list__button_active" data-category="Architecture">Architecture</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Art & Fashion</button>
+                            <button class="book-list__button" data-category="Art & Fashion">Art & Fashion</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Biography</button>
+                            <button class="book-list__button" data-category="Biography">Biography</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Business</button>
+                            <button class="book-list__button" data-category="Business">Business</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Crafts & Hobbies</button>
+                            <button class="book-list__button" data-category="Crafts & Hobbies">Crafts & Hobbies</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Drama</button>
+                            <button class="book-list__button" data-category="Drama">Drama</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Fiction</button>
+                            <button class="book-list__button" data-category="Fiction">Fiction</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Food & Drink</button>
+                            <button class="book-list__button" data-category="Food & Drink">Food & Drink</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Health & Wellbeing</button>
+                            <button class="book-list__button" data-category="Health & Wellbeing">Health & Wellbeing</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">History & Politics</button>
+                            <button class="book-list__button" data-category="History & Politics">History & Politics</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Humor</button>
+                            <button class="book-list__button" data-category="Humor">Humor</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Poetry</button>
+                            <button class="book-list__button" data-category="Poetry">Poetry</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Psychology</button>
+                            <button class="book-list__button" data-category="Psychology">Psychology</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Science</button>
+                            <button class="book-list__button" data-category="Science">Science</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Technology</button>
+                            <button class="book-list__button" data-category="Technology">Technology</button>
                         </li>
                         <li class="book-list_section">
-                            <button class="book-list__button">Travel & Maps</button>
+                            <button class="book-list__button" data-category="Travel & Maps">Travel & Maps</button>
                         </li>
                     </ul>
                 </aside>
