Added functionality for adding purchases to the cart

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                         <li>
                             <a href="#" class="header__img-link">
                                 <img class="header__img" src="src/image/icon/basket.svg" alt="basket">
+                                <span class="header__purchase-counter"></span>
                             </a>    
                         </li>
                     </ul>
